tests/sksl/errors/SelfReferentialInitializerExpression.glsl
### Compilation failed:

error: 2: unknown identifier 'x'
1 error
